2015-01-22  Ian Lance Taylor  <iant@google.com>

	PR go/64595
	* go.1, gofmt.1: New files.
	* Makefile.am (man_MANS): New variable.
	* Makefile.in: Rebuild.

2015-01-21  Ian Lance Taylor  <iant@google.com>

	* Makefile.am (noinst_PROGRAMS): New variable.
	(libexecsub_PROGRAMS): Remove variable.
	(install-exec-local, uninstall-local): New targets.
	* Makefile.in: Rebuild.

2015-01-20  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac: Check if sched_yield and/or nanosleep need -lrt.
	* configure: Regenerate.
	* Makefile.am (go$(EXEEXT), gofmt$(EXEEXT), cgo$(EXEEXT)): Link
	with $(LIBS).
	* Makefile.in: Regenerate.

2015-01-15  Ian Lance Taylor  <iant@google.com>

	* configure.ac: Check for networking libraries; see NET_LIBS.
	* Makefile.am (go$(EXEEXT)): Link against NET_LIBS.
	(gofmt$(EXEEXT), cgo$(EXEEXT)): Likewise.
	* configure, Makefile.in: Rebuild.

2015-01-14  Ian Lance Taylor  <iant@google.com>

	* Makefile.am (go_cmd_go_files): Sort entries.  Add generate.go.
	* Makefile.in: Rebuild.

2015-01-09  Ian Lance Taylor  <iant@google.com>

	* Makefile.am (GOCOMPILER): Set to GOC or GOC_FOR_TARGET depending
	on whether this is a native build or not.
	(GOCOMPILE, GOLINK): Use $(GOCOMPILER) instead of $(GOC).
	(MOSTLYCLEANFILES): Define.
	* Makefile.in: Rebuild.

	* Initial implementation.